--- a/follower/index.html
+++ b/follower/index.html
@@ -1,1 +1,9 @@
-
+<div class="text-container">
+        <div class="awsome-text-container">
+            <span id="username-container"></span>
+          	<br>
+            thanks for
+          	<br>
+            following!
+        </div>
+</div>
