--- a/follower/index.html
+++ b/follower/index.html
@@ -1,3 +1,4 @@
+<!--'text-container'. 'username-container' host the follower name -->
 <div class="text-container">
         <div class="awsome-text-container">
             <span id="username-container"></span>
